# seawasp

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: pylint.yml
tests/: test_seawasp.py
