[tool.poetry]
name = "seawasp"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Emiel Wiedijk <me@aimileus.nl>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
